[gd_scene load_steps=4 format=3 uid="uid://bntsd8akyqgiv"]

[ext_resource type="Script" uid="uid://g4pwoynin2x4" path="res://ShmupSandbox/UI/Scripts/start_screen.gd" id="1_bbtnf"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="2_bbtnf"]
[ext_resource type="FontFile" uid="uid://bqxmc05dmv15h" path="res://ShmupSandbox/Assets/Fonts/PixelCode-ExtraBold.otf" id="3_yycc1"]

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbtnf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bbtnf")
theme_override_font_sizes/font_size = 120
text = "Cataclyzm"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="press_start_label" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yycc1")
theme_override_font_sizes/font_size = 25
text = "PRESS ANY BUTTON"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="blink_timer" type="Timer" parent="."]

[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
